@@ -1,5 +1,16 @@
 2006-04-26  Julian Brown  <julian@codesourcery.com>
 
+	* gas/config/tc-arm.c (neon_is_quarter_float): Move, and rename to...
+	(is_quarter_float): Rename from above. Simplify slightly.
+	(parse_qfloat_immediate): Parse a "quarter precision" floating-point
+	number.
+	(parse_neon_mov): Parse floating-point constants.
+	(neon_qfloat_bits): Fix encoding.
+	(neon_cmode_for_move_imm): Tweak to use floating-point encoding in
+	preference to integer encoding when using the F32 type.
+
+2006-04-26  Julian Brown  <julian@codesourcery.com>
+
 	* config/tc-arm.c (neon_el_type): Make NT_invtype be the zero (so
 	zero-initialising structures containing it will lead to invalid types).
 	(arm_it): Add vectype to each operand.
